--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AppMap</string>
+    <string name="title_activity_map">AppMap</string>
+    <string name="appmap">AppMap</string>
 </resources>
